force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/FoundSummaryOverride__c.field-meta.xml
<CustomField>
    <fullName>FoundSummaryOverride__c</fullName>
    <label>Advanced: Found Summary (Text)</label>
    <description
  >Optional. Plain text (not a formula) that overrides the auto-generated "N of M records did not pass" Found line on a multi-row (Every record must pass) query check. Supports the count tokens {!failCount} and {!totalCount} plus {!FieldName} record tokens. Example: {!failCount} of {!totalCount} contacts missing email.</description>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText
  >Plain text (not a formula) for the Found line on an Every-record-must-pass check. Tokens: {!failCount}, {!totalCount}, {!FieldName}. Example: {!failCount} of {!totalCount} contacts missing email.</inlineHelpText>
</CustomField>