force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Active</label>
    <description
  >When unchecked, this rule is ignored during evaluation without deleting the record.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <inlineHelpText
  >Uncheck to disable this rule without deleting it. It will be excluded from all Check Set runs.</inlineHelpText>
</CustomField>