force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/MaxRows__c.field-meta.xml
<CustomField>
    <fullName>MaxRows__c</fullName>
    <label>Max Rows (safety cap, max 2000)</label>
    <description
  >Optional safety cap on how many rows this check's query may return. Maximum is 2000. Blank uses the default of 2000. You can only lower the cap, not raise it.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
        <inlineHelpText
  >Optional. Lowers the row limit for this check's query (max 2000). Leave blank to use the default of 2000.</inlineHelpText>
</CustomField>