force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/MessageWhenCannotRun__c.field-meta.xml
<CustomField>
    <fullName>MessageWhenCannotRun__c</fullName>
    <label>Message When Check Cannot Run</label>
    <description
  >Optional. Replaces the default message users see when a check cannot be evaluated (for example, a bad query or formula). Keep it user-friendly — never include SOQL, errors, or technical details. Press Enter to start a new line; each line is shown as a separate line on the card.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Optional. Friendly text shown when the check cannot run. Do not include technical details. Press Enter for a new line.</inlineHelpText>
</CustomField>