force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/NoRowsResult__c.field-meta.xml
<CustomField>
    <fullName>NoRowsResult__c</fullName>
    <label>If Query Finds No Records</label>
    <description
  >What the check should do when the "Source Query" returns no records. No default - you must choose, because Pass versus Fail can invert the meaning of a check. Required when "How To Read Query Results" is "Any record passes", "Every record passes", or "Compare as lists". Choices: "Pass" (no records is healthy), "Fail" (no records is a problem), "Skip" (not applicable here), or "Unable to evaluate" (cannot tell). Example: a query for open high-priority cases finding none usually means the record is healthy, so choose "Pass".</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PASS</fullName><default
        >false</default></value><value><fullName>FAIL</fullName><default
        >false</default></value><value><fullName>SKIP</fullName><default
        >false</default></value><value><fullName
        >UNABLE_TO_EVALUATE</fullName><default
        >false</default></value></valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >What "no records" means for this check (no default - you must choose). Example: a query for open high-priority cases returning nothing usually means healthy -&gt; "Pass". Required when "How To Read Query Results" is "Any/Every record passes" or "Compare as lists".</inlineHelpText>
</CustomField>