force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Comparison Operator</label>
    <description
  >How the value from the Primary Query (SOQL) is compared to what you choose under Compare To Source. Not used for Record formula checks. "Is empty" and "Is not empty" need nothing to compare against. The five list operators split into two paths: (1) "List includes any of" and "List excludes all of" work on a Single query check - the value to test comes from Value To Test (list checks only) and the list to test against comes from the Second Query; (2) "Lists share any value", "List includes all of", and "Lists match exactly" work only with Compare two queries set to Compare as two lists.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>NotEquals</fullName>
                <label>Does not equal</label>
            </value>
            <value>
                <fullName>GreaterThan</fullName>
                <label>Greater than</label>
            </value>
            <value>
                <fullName>GreaterThanOrEqual</fullName>
                <label>Greater than or equal</label>
            </value>
            <value>
                <fullName>LessThan</fullName>
                <label>Less than</label>
            </value>
            <value>
                <fullName>LessThanOrEqual</fullName>
                <label>Less than or equal</label>
            </value>
            <value>
                <fullName>Contains</fullName>
                <label>Contains text</label>
            </value>
            <value>
                <fullName>DoesNotContain</fullName>
                <label>Does not contain text</label>
            </value>
            <value>
                <fullName>IsBlank</fullName>
                <label>Is empty</label>
            </value>
            <value>
                <fullName>IsNotBlank</fullName>
                <label>Is not empty</label>
            </value>
            <value>
                <fullName>ListContainsAny</fullName>
                <label>List includes any of</label>
            </value>
            <value>
                <fullName>ListDoesNotContainAny</fullName>
                <label>List excludes all of</label>
            </value>
            <value>
                <fullName>ListsOverlap</fullName>
                <label>Lists share any value</label>
            </value>
            <value>
                <fullName>ListContainsAll</fullName>
                <label>List includes all of</label>
            </value>
            <value>
                <fullName>ExactListMatch</fullName>
                <label>Lists match exactly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Pick how to compare. "Is empty"/"Is not empty" need no value. "List includes any of"/"List excludes all of" work on a Single query (value from Value To Test, list from the Second Query). "Lists share any value"/"List includes all of"/"Lists match exactly" need Compare two queries set to Compare as two lists.</inlineHelpText>
</CustomField>