force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/PassFailFormula__c.field-meta.xml
<CustomField>
    <fullName>PassFailFormula__c</fullName>
    <label>Pass Condition (Formula)</label>
    <description
  >Salesforce formula syntax for Record formula checks only - return true (pass) or false (fail), e.g. NOT(ISBLANK(BillingCity)). For Single query list checks ("List includes any of" / "List excludes all of"), use Value To Test (list checks only) instead. Not used for any other Check Type.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Record formula checks: return true/false (e.g. NOT(ISBLANK(BillingCity))). For list checks ("List includes any of"/"List excludes all of"), use Value To Test (list checks only) instead.</inlineHelpText>
</CustomField>