force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/PrerequisiteRule__c.field-meta.xml
<CustomField>
    <fullName>PrerequisiteRule__c</fullName>
    <label>Prerequisite Rule</label>
    <description
  >Optional. Enter the Record Name (API Name / DeveloperName, shown in the Name column in Setup - NOT the "Check Title" users see) of another active check in the same Check Set that must PASS before this check runs. The prerequisite must have a lower "Evaluation Order". If the prerequisite does not pass, this check is Skipped. A value that does not match a check in the same Check Set also Skips this check silently at runtime; the mismatch is reported only when the Check Set configuration is validated, not when you save this record.</description>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText
  >Optional. The Record Name (API Name in Setup, not the "Check Title") of an earlier check (lower "Evaluation Order") in the same Check Set that must pass first. If it fails or the name doesn't match, this check is Skipped.</inlineHelpText>
</CustomField>