force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/PrimaryActionLabel__c.field-meta.xml
<CustomField>
    <fullName>PrimaryActionLabel__c</fullName>
    <label>Action Button Label</label>
    <description
  >Optional label for a read-only remediation link shown with fix instructions.</description>
    <type>Text</type>
    <length>80</length>
    <inlineHelpText
  >Optional. Button or link text shown with Fix Instructions, e.g. Open Account Guidance.</inlineHelpText>
</CustomField>