force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/PrimaryActionUrl__c.field-meta.xml
<CustomField>
    <fullName>PrimaryActionUrl__c</fullName>
    <label>Action Button URL</label>
    <description
  >Optional URL for a read-only remediation link. Use for docs, playbooks, or Salesforce deep links; do not use it for automatic record updates. Supports {!FieldName} merge tokens (including relationship paths, e.g. {!Owner.ManagerId}) resolved against the record before the link is shown. Stored as Long Text Area (2000) so tokenized report/list deep links have room; the framework validates the resolved URL.</description>
    <type>LongTextArea</type>
    <length>2000</length>
    <inlineHelpText
  >Optional. Link users to guidance or a Salesforce page that helps them fix the issue. The link is read-only and may use {!FieldName} tokens, for example /lightning/r/Report/00O.../view?fv0={!Id}.</inlineHelpText>
</CustomField>