force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/PublishResultEvent__c.field-meta.xml
<CustomField>
    <fullName>PublishResultEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Publishes a finalized Rule Result event after a deliberately initiated run. Page-load runs never publish.</description>
    <inlineHelpText
  >Publish this Rule's result for deliberate API, Flow, scheduled, batch, or user-requested runs. Page-load runs never publish.</inlineHelpText>
    <label>Publish Result Event</label>
    <type>Checkbox</type>
</CustomField>