force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/Record_Health_Check_Set__c.field-meta.xml
<CustomField>
    <fullName>Record_Health_Check_Set__c</fullName>
    <label>Check Set</label>
    <description
  >Parent Check Set this rule belongs to. A rule must belong to exactly one Check Set.</description>
    <type>MetadataRelationship</type>
    <relationshipName>Record_Health_Check_Rules</relationshipName>
    <referenceTo>Record_Health_Check_Set__mdt</referenceTo>
        <inlineHelpText
  >The parent Check Set this rule belongs to. Required on every rule.</inlineHelpText>
    <required>true</required>
</CustomField>