force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/RecordFormulaValue__c.field-meta.xml
<CustomField>
    <fullName>RecordFormulaValue__c</fullName>
    <label>Expected Formula (on this record)</label>
    <description
  >A Salesforce formula that produces the value to compare against, based on the current record. Used only when Compare To Source is "A formula on the record". Formula syntax only — not Apex or SOQL.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Salesforce formula giving the value to compare against, e.g. BillingCity or AnnualRevenue / 10. Used when Compare To Source is "A formula on the record".</inlineHelpText>
</CustomField>