force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/RunOrder__c.field-meta.xml
<CustomField>
    <fullName>RunOrder__c</fullName>
    <label>Run Order (lower runs first)</label>
    <description
  >Sets the order checks run and appear in the panel. Lower numbers come first. Ties are broken alphabetically by DeveloperName.</description>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
        <inlineHelpText
  >Lower number runs first. Tip: use 10, 20, 30 so you can slot new checks in between later.</inlineHelpText>
    <required>true</required>
</CustomField>