force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/RunThisCheckWhen__c.field-meta.xml
<CustomField>
    <fullName>RunThisCheckWhen__c</fullName>
    <label>Applies To</label>
    <description
  >Decides whether this check applies to the current record before it runs. Always runs it every time. Otherwise you can gate it on a formula or on a record count. When the gate is not met, the check is marked Skipped.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>All records</label>
            </value>
            <value>
                <fullName>Formula</fullName>
                <label>Only records where a formula is true</label>
            </value>
            <value>
                <fullName>SOQL</fullName>
                <label>Only records where a count query matches</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Always = run on every record. Only records where a formula is true = gate on Applies When Formula Is True. Only records where a count query matches = gate on Applies When Count Query Matches. If the gate is not met, the check is Skipped.</inlineHelpText>
    <required>true</required>
</CustomField>