force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/RunWhenCountQuery__c.field-meta.xml
<CustomField>
    <fullName>RunWhenCountQuery__c</fullName>
    <label>Applies When Count Query Matches</label>
    <description
  >A COUNT() SOQL query used only to decide if this check applies. Its count is compared using Count Must Be and Count Value. Required when "Applies To" is "Only records where a count query matches".</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >A COUNT() query, e.g. SELECT COUNT() FROM Contract WHERE AccountId = {!Id} AND Status = 'Active'. Compared using Count Must Be and Count Value.</inlineHelpText>
</CustomField>