force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/RunWhenFormula__c.field-meta.xml
<CustomField>
    <fullName>RunWhenFormula__c</fullName>
    <label>Applies When Formula Is True</label>
    <description
  >A Salesforce formula returning true or false. True means this check applies and runs; false means it is Skipped. Required when "Applies To" is "Only records where a formula is true".</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Salesforce formula returning true/false, e.g. ISPICKVAL(Type, "Partner"). True = run the check. False = Skipped.</inlineHelpText>
</CustomField>