force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ScalarFormulaReturnType__c.field-meta.xml
<CustomField>
    <fullName>ScalarFormulaReturnType__c</fullName>
    <label>Advanced: Formula Result Type</label>
    <description
  >Optional. Tells Record Health Check what type a formula returns. Applies to the Found/Expected display formulas and to formula-based comparison and list-check values. Leave Auto unless you know the formula's return type; declaring it saves formula calls, but Auto always resolves correctly.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto (detect type)</label>
            </value>
            <value>
                <fullName>Boolean</fullName>
                <label>Checkbox (true/false)</label>
            </value>
            <value>
                <fullName>Number</fullName>
                <label>Number / Currency / Percent</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
                <label>Date/Time</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <inlineHelpText
  >The type a formula returns. Applies to Found/Expected display formulas and to formula comparison and list values. Leave Auto unless you know the type; Auto always works but uses more formula calls.</inlineHelpText>
</CustomField>