force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity (only if it fails)</label>
    <description
  >Business impact level applied only when this check results in FAIL. Error shows red, Warning shows amber, Info shows blue. Has no effect on PASS, SKIPPED, UNABLE_TO_EVALUATE, or ERROR states.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
                <default>true</default>
                <label>Warning</label>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Sets the visual severity when this check fails. Error = red, Warning = amber, Info = blue. Does not affect non-FAIL outcomes.</inlineHelpText>
    <required>true</required>
</CustomField>