force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Tooltip__c</fullName>
    <label>Description (hover tooltip)</label>
    <description
  >Optional. Extra context shown as a tooltip when the user hovers over (or focuses) the check name. It is not shown inline on the row.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Optional. Appears as a hover tooltip on the check name to explain what the check looks at.</inlineHelpText>
</CustomField>