force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ValueToTest__c.field-meta.xml
<CustomField>
    <fullName>ValueToTest__c</fullName>
    <label>Value To Test (list checks only)</label>
    <description
  >Required for a Single query check using the "List includes any of" / "List excludes all of" operators: enter the formula that returns the scalar field value to test against the list from the Second Query (e.g. BillingCountry). Leave blank for every other Check Type.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >List checks only ("List includes any of" / "List excludes all of"). Return the single field value to test against the Second Query list, e.g. BillingCountry. Leave blank for record-formula and all other query checks.</inlineHelpText>
</CustomField>