force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/WhenMultipleRows__c.field-meta.xml
<CustomField>
    <fullName>WhenMultipleRows__c</fullName>
    <label>If Query Returns Multiple Rows</label>
    <description
  >Required for Single query and Compare two queries checks. Tells the framework how to read a result that has more than one row. For COUNT() / SUM() and other aggregate queries, choose One result (or aggregate) - they return one aggregate row even when many records match, so the row-by-row options do not apply.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OneResult</fullName>
                <default>true</default>
                <label>The query returns one result</label>
            </value>
            <value>
                <fullName>AnyRowPasses</fullName>
                <label>At least one record must pass</label>
            </value>
            <value>
                <fullName>AllRowsPass</fullName>
                <label>Every record must pass</label>
            </value>
            <value>
                <fullName>CompareAsLists</fullName>
                <label>Compare both results as lists</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >One result = expect a single row or a COUNT()/SUM(). At least one row must pass = any row passing is enough. Every row must pass = all rows must pass. Compare as two lists = needed for the list operators and Compare two queries.</inlineHelpText>
</CustomField>