force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/WhenValueIsEmpty__c.field-meta.xml
<CustomField>
    <fullName>WhenValueIsEmpty__c</fullName>
    <label>If A Value Is Empty</label>
    <description
  >How to handle empty (null) field values while comparing rows. Applies to Single query and Compare two queries checks. Ignored for Record formula and Use custom Apex checks and for pure aggregate queries.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SkipRecordsWithMissingValue</fullName>
                <default>true</default>
                <label>Ignore records with empty values</label>
            </value>
            <value>
                <fullName>TreatMissingAsBlank</fullName>
                <label>Treat empty values as blank</label>
            </value>
            <value>
                <fullName>MissingMeansNoMatch</fullName>
                <label>Treat empty values as not matching</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Ignore rows with empty values (default) = leave them out of the comparison. Treat empty as blank = compare an empty value as "" (e.g. empty Equals "" passes). Empty never matches = an empty value always fails the comparison (e.g. empty Equals "" fails).</inlineHelpText>
</CustomField>