force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/WhenZeroRows__c.field-meta.xml
<CustomField>
    <fullName>WhenZeroRows__c</fullName>
    <label>If Query Returns Zero Rows</label>
    <description
  >What the check should do when the Primary Query (SOQL) returns no rows. If left blank, the check is marked Skipped. Required when "If Query Returns Multiple Rows" is At least one row must pass, Every row must pass, or Compare as two lists.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
                <label>Pass the check</label>
            </value>
            <value>
                <fullName>Fail</fullName>
                <label>Fail the check</label>
            </value>
            <value>
                <fullName>Skip</fullName>
                <label>Skip the check</label>
            </value>
            <value>
                <fullName>UnableToEvaluate</fullName>
                <label>Show unable to check</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Choose what no rows means for this check. Example: a query for open high-priority cases returning zero rows usually means the record is healthy, so choose Treat as passed. Blank defaults to skipped.</inlineHelpText>
</CustomField>