force-app/main/default/objects/Record_Health_Check_Rule__mdt/listViews/Examples.listView-meta.xml
<ListView>
    <fullName>Examples</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Record_Health_Check_Set__c</columns>
    <columns>CheckTitle__c</columns>
    <columns>EvaluationType__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>startsWith</operation>
        <value>Example_</value>
    </filters>
    <label>Examples (Example_)</label>
</ListView>